# pacer

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal.ghc9101.project.freeze  cabal.ghc9122.project  cabal.ghc9122.project.freeze  cabal.project  flake.nix  hie.yaml  pacer.cabal  run-calc.cabal  running.cabal  stack.yaml
.github/scripts/: nix_test.sh  release_linux.sh  release_osx.sh  release_windows.sh  verify_env.sh
.github/workflows/: ci.yaml
app/: Main.hs
backend/: pacer.cabal
backend/data/input/example/: chart-requests.toml  runs.toml
backend/src/Pacer/: Chart.hs  Derive.hs  Driver.hs  Exception.hs  Prelude.hs  Utils.hs
backend/src/Pacer/Chart/Data/: Chart.hs  ChartData.hs  ChartOptions.hs  ChartRequest.hs  Run.hs
backend/src/Pacer/Class/: Parser.hs
backend/src/Pacer/Config/: Args.hs  Data.hs
backend/src/Pacer/Config/Args/: Command.hs  Utils.hs
backend/src/Pacer/Data/: Distance.hs  Duration.hs  Pace.hs
backend/src/Pacer/Data/Distance/: Units.hs
backend/test/functional/: Main.hs
backend/test/functional/Functional/: Chart.hs  Derive.hs  Prelude.hs  Scale.hs
backend/test/functional/data/: testDuplicateDateError_chart-requests.toml  testFilterEmptyError_chart-requests.toml  testFilterEmptyError_runs.toml  testFilterPreds_chart-requests.toml  testFilter_chart-requests.toml  testFilter_runs.toml  testSimple_chart-requests.toml
backend/test/functional/goldens/: testDuplicateDateError.golden  testDuplicateDateError_windows.golden  testExampleChart.golden  testFilter.golden  testFilterEmptyError.golden  testFilterPreds.golden  testSimple.golden
backend/test/unit/: Main.hs
backend/test/unit/Unit/: Pacer.hs  Prelude.hs
backend/test/unit/Unit/Pacer/: Derive.hs
backend/test/unit/Unit/Pacer/Chart/Data/: ChartRequest.hs  Run.hs
backend/test/unit/Unit/Pacer/Data/: Distance.hs
backend/test/unit/goldens/: testParseExampleChartRequestsToml.golden  testParseExampleRunsToml.golden
bench/app/: Main.hs  baseline_9.10.1.csv  baseline_9.12.2.csv  baseline_ubuntu-latest_9.10.1_ci.csv  baseline_ubuntu-latest_9.10.2_ci.csv  baseline_ubuntu-latest_9.12.1_ci.csv
bench/fit/: Main.hs
build_hannah/: bundle.js  index.html
data/input/example/: chart-requests.toml
docker/alpine_amd64/: Dockerfile
docker/alpine_arm64v8/: Dockerfile
docs/: CHANGELOG.md  Pacer-Class-FromAlt.html  Pacer-Class-IOrd.html  Pacer-Class-Parser.html  Pacer-Class-Units.html  Pacer-Command-Chart-Args.html  Pacer-Command-Chart-Data-Activity.html  Pacer-Command-Chart-Data-ActivityLabel.html  Pacer-Command-Chart-Data-Chart.html  Pacer-Command-Chart-Data-ChartData.html  Pacer-Command-Chart-Data-ChartExtra.html  Pacer-Command-Chart-Data-ChartOptions.html  Pacer-Command-Chart-Data-ChartRequest.html  Pacer-Command-Chart-Data-Expr-Eq.html  Pacer-Command-Chart-Data-Expr-Filter.html  Pacer-Command-Chart-Data-Expr-Ord.html  Pacer-Command-Chart-Data-Expr-Set.html  Pacer-Command-Chart-Data-Expr.html  Pacer-Command-Chart-Data-Garmin.html  Pacer-Command-Chart-Data-Run.html  Pacer-Command-Chart-Data-Time-Moment.html  Pacer-Command-Chart-Data-Time-Month.html  Pacer-Command-Chart-Data-Time-Timestamp-Internal.html  Pacer-Command-Chart-Data-Time-Timestamp.html  Pacer-Command-Chart-Data-Time-Year.html  Pacer-Command-Chart-Data-Time.html  Pacer-Command-Chart-Params.html  Pacer-Command-Chart-Server.html  Pacer-Command-Chart.html  Pacer-Command-Convert-Args.html  Pacer-Command-Convert-Params.html  Pacer-Command-Convert.html  Pacer-Command-Derive-Args.html  Pacer-Command-Derive-Params.html  Pacer-Command-Derive.html  Pacer-Command-Scale-Args.html  Pacer-Command-Scale-Params.html  Pacer-Command-Scale.html  Pacer-Command.html  Pacer-Config-Args.html  (+74 more)
docs/src/: Pacer.Class.FromAlt.html  Pacer.Class.IOrd.html  Pacer.Class.Parser.html  Pacer.Class.Units.html  Pacer.Command.Chart.Args.html  Pacer.Command.Chart.Data.Activity.html  Pacer.Command.Chart.Data.ActivityLabel.html  Pacer.Command.Chart.Data.Chart.html  Pacer.Command.Chart.Data.ChartData.html  Pacer.Command.Chart.Data.ChartExtra.html  Pacer.Command.Chart.Data.ChartOptions.html  Pacer.Command.Chart.Data.ChartRequest.html  Pacer.Command.Chart.Data.Expr.Eq.html  Pacer.Command.Chart.Data.Expr.Filter.html  Pacer.Command.Chart.Data.Expr.Ord.html  Pacer.Command.Chart.Data.Expr.Set.html  Pacer.Command.Chart.Data.Expr.html  Pacer.Command.Chart.Data.Garmin.html  Pacer.Command.Chart.Data.Run.html  Pacer.Command.Chart.Data.Time.Moment.html  Pacer.Command.Chart.Data.Time.Month.html  Pacer.Command.Chart.Data.Time.Timestamp.Internal.html  Pacer.Command.Chart.Data.Time.Timestamp.html  Pacer.Command.Chart.Data.Time.Year.html  Pacer.Command.Chart.Data.Time.html  Pacer.Command.Chart.Params.html  Pacer.Command.Chart.Server.html  Pacer.Command.Chart.html  Pacer.Command.Convert.Args.html  Pacer.Command.Convert.Params.html  Pacer.Command.Convert.html  Pacer.Command.Derive.Args.html  Pacer.Command.Derive.Params.html  Pacer.Command.Derive.html  Pacer.Command.Scale.Args.html  Pacer.Command.Scale.Params.html  Pacer.Command.Scale.html  Pacer.Command.html  Pacer.Config.Args.html  Pacer.Config.Env.Types.html  (+28 more)
documentation/: faq.md
examples/: Activities.csv  activities.jsonc  activity-labels.jsonc  chart-requests-garmin.toml  chart-requests.jsonc  chart-requests.toml  config.jsonc  config.toml  run-labels.jsonc  run-labels.toml  runs.jsonc
scripts/: bench.sh  build.sh  haddock.sh  watch.sh
src/: Pacer.hs  Running.hs
src/Pacer/: Chart.hs  Command.hs  Derive.hs  Driver.hs  Exception.hs  Log.hs  Prelude.hs  Utils.hs  Web.hs
src/Pacer/Class/: FromAlt.hs  IOrd.hs  Parser.hs  Units.hs
src/Pacer/Command/: Chart.hs  Convert.hs  Derive.hs  Scale.hs
src/Pacer/Config/: Args.hs  Env.hs  Logging.hs  Phase.hs  Toml.hs  Utils.hs
src/Pacer/Configuration/: Args.hs  Config.hs  Env.hs  Logging.hs  (+2 more)
src/Running/: Driver.hs  Prelude.hs
test/e2e/: Main.hs
test/functional/: Main.hs
test/unit/: Main.hs
web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: build_charts.ts  charts.json  index.html  index.ts  style.css  theme.ts  types.ts  utils.ts
(+390 files in other folders)
