cabal-version: 2.4
name:          pacer
version:       0.1
tested-with:   GHC ==9.8.2 || ==9.10.1
copyright:     2024 Thomas Bidne
author:        Thomas Bidne
maintainer:    tbidne@protonmail.com
homepage:      https://github.com/tbidne/pacer/
bug-reports:   https://github.com/tbidne/pacer/issues
synopsis:      A tool for runners.
description:
  Pacer is an executable that produces graphs based on user running data.
  It also provides a CLI interface for common running calculations e.g.
  deriving a pace from distance and duration.

category:      Graphics

source-repository head
  type:     git
  location: https://github.com/tbidne/pacer

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    LexicalNegation
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    TypeAbstractions
    TypeFamilyDependencies

  if os(windows)
    cpp-options: -DWINDOWS

  elif os(osx)
    cpp-options: -DOSX -DPOSIX

  else
    cpp-options: -DLINUX -DPOSIX

  default-language:   GHC2021

library
  import:          common-lang
  other-modules:   Paths_pacer
  autogen-modules: Paths_pacer
  exposed-modules:
    Pacer.Chart
    Pacer.Chart.Data.Chart
    Pacer.Chart.Data.ChartData
    Pacer.Chart.Data.ChartExtra
    Pacer.Chart.Data.ChartOptions
    Pacer.Chart.Data.ChartRequest
    Pacer.Chart.Data.Run
    Pacer.Class.Parser
    Pacer.Class.Units
    Pacer.Config.Args
    Pacer.Config.Args.Command
    Pacer.Config.Args.Utils
    Pacer.Data.Distance
    Pacer.Data.Distance.Units
    Pacer.Data.Duration
    Pacer.Data.Duration.Units
    Pacer.Data.Pace
    Pacer.Derive
    Pacer.Driver
    Pacer.Exception
    Pacer.Prelude
    Pacer.Utils

  build-depends:
    , aeson                 >=2.0       && <2.3
    , aeson-pretty          ^>=0.8.9
    , algebra-simple        ^>=0.1
    , base                  >=4.14.0.0  && <4.21
    , bytestring            >=0.10.12   && <0.13
    , containers            >=0.6.3.1   && <0.8
    , directory             ^>=1.3.8.0
    , exception-utils       ^>=0.1
    , filepath              >=1.4.100.1 && <1.6
    , fs-utils              ^>=0.1
    , megaparsec            >=7.0.5     && <9.7
    , nonempty-containers   >=0.3.4.2   && <0.4
    , optparse-applicative  >=0.15      && <0.19
    , relative-time         ^>=0.1
    , singletons            ^>=3.0.3
    , smart-math            ^>=0.1
    , text                  >=1.2.3.2   && <2.2
    , text-display          >=0.0.3.0   && <0.6
    , time                  >=1.9.3     && <1.15
    , toml-reader           >=0.2.0.0   && <0.3.0.0

  -- tuple syntax
  if impl(ghc >=9.10.1)
    build-depends: ghc-experimental ^>=0.1.0.0

  hs-source-dirs:  src

executable pacer
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , pacer

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Pacer.Chart.Data.ChartRequest
    Unit.Pacer.Chart.Data.Run
    Unit.Pacer.Data.Distance
    Unit.Pacer.Data.Distance.Units
    Unit.Pacer.Data.Duration
    Unit.Pacer.Data.Pace
    Unit.Pacer.Derive
    Unit.Prelude
    Unit.Utils

  build-depends:
    , base
    , fs-utils
    , hedgehog        >=1.0.2    && <1.5
    , pacer
    , pretty-simple   ^>=4.1.2.0
    , tasty           >=1.1.0.3  && <1.6
    , tasty-golden    ^>=2.3.1.1
    , tasty-hedgehog  >=1.0.0.2  && <1.5
    , tasty-hunit     >=0.9      && <0.11
    , toml-reader

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Functional.Chart
    Functional.Convert
    Functional.Derive
    Functional.Prelude
    Functional.Scale

  build-depends:
    , base
    , directory
    , env-guard       ^>=0.2
    , fs-utils
    , hedgehog
    , pacer
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit

  hs-source-dirs: test/functional
  ghc-options:    -threaded
