cabal-version:      2.4
name:               pacer
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.10.1
copyright:          2024-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/pacer/
bug-reports:        https://github.com/tbidne/pacer/issues
synopsis:           A tool for runners.
description:
  Pacer is an executable that produces graphs based on user running data.
  It also provides a CLI interface for common running calculations e.g.
  deriving a pace from distance and duration.

category:           Graphics
extra-source-files:
  cabal.project
  examples/*.toml
  examples/chart.png
  LICENSE
  README.md

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/pacer

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    LexicalNegation
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RequiredTypeArguments
    TypeAbstractions
    TypeFamilyDependencies

  if os(windows)
    cpp-options: -DWINDOWS

  elif os(osx)
    cpp-options: -DOSX -DPOSIX

  else
    cpp-options: -DLINUX -DPOSIX

  default-language:   GHC2021

library
  import:          common-lang
  other-modules:   Paths_pacer
  autogen-modules: Paths_pacer
  exposed-modules:
    Pacer.Class.Parser
    Pacer.Class.Units
    Pacer.Command
    Pacer.Command.Chart
    Pacer.Command.Chart.Args
    Pacer.Command.Chart.Data.Chart
    Pacer.Command.Chart.Data.ChartData
    Pacer.Command.Chart.Data.ChartExtra
    Pacer.Command.Chart.Data.ChartOptions
    Pacer.Command.Chart.Data.ChartRequest
    Pacer.Command.Chart.Data.Run
    Pacer.Command.Chart.Params
    Pacer.Command.Convert
    Pacer.Command.Convert.Args
    Pacer.Command.Convert.Params
    Pacer.Command.Derive
    Pacer.Command.Derive.Args
    Pacer.Command.Derive.Params
    Pacer.Command.Scale
    Pacer.Command.Scale.Args
    Pacer.Command.Scale.Params
    Pacer.Config.Args
    Pacer.Config.Env
    Pacer.Config.Logging
    Pacer.Config.Phase
    Pacer.Config.Toml
    Pacer.Config.Utils
    Pacer.Data.Distance
    Pacer.Data.Distance.Units
    Pacer.Data.Duration
    Pacer.Data.Duration.Units
    Pacer.Data.Pace
    Pacer.Driver
    Pacer.Exception
    Pacer.Prelude
    Pacer.Utils
    Pacer.Web
    Pacer.Web.Paths
    Pacer.Web.Utils

  build-depends:
    , aeson                            >=2.0      && <2.3
    , aeson-pretty                     ^>=0.8.9
    , algebra-simple                   ^>=0.1
    , base                             >=4.20.0.0 && <4.22
    , bytestring                       >=0.10.12  && <0.13
    , containers                       >=0.6.3.1  && <0.8
    , effectful                        ^>=2.5.0.0
    , exception-utils                  ^>=0.1
    , exceptions                       ^>=0.10.4
    , filepath                         >=1.5      && <1.6
    , fs-effectful                     ^>=0.1
    , fs-utils                         ^>=0.1
    , ghc-experimental                 ^>=0.1.0.0
    , ioref-effectful                  ^>=0.1
    , logger-effectful                 ^>=0.1
    , logger-ns-effectful              ^>=0.1
    , megaparsec                       >=7.0.5    && <9.7
    , nonempty-containers              >=0.3.4.2  && <0.4
    , optparse-applicative             >=0.15     && <0.19
    , optparse-effectful               ^>=0.1
    , path                             ^>=0.9.6
    , relative-time                    ^>=0.1
    , singletons                       ^>=3.0.3
    , smart-math                       ^>=0.1
    , template-haskell                 >=2.21     && <2.23
    , terminal-effectful               ^>=0.1
    , text                             >=1.2.3.2  && <2.2
    , text-display                     >=0.0.3.0  && <0.6
    , time                             >=1.9.3    && <1.15
    , time-effectful                   ^>=0.1
    , toml-reader                      >=0.2.0.0  && <0.3.0.0
    , typed-process-dynamic-effectful  ^>=0.1

  hs-source-dirs:  src

executable pacer
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , exception-utils
    , pacer

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Pacer.Chart
    Unit.Pacer.Chart.Data.ChartRequest
    Unit.Pacer.Chart.Data.Run
    Unit.Pacer.Data.Distance
    Unit.Pacer.Data.Distance.Units
    Unit.Pacer.Data.Duration
    Unit.Pacer.Data.Pace
    Unit.Pacer.Derive
    Unit.Prelude
    Unit.Utils

  build-depends:
    , base
    , containers
    , filepath
    , fs-effectful
    , fs-utils
    , hedgehog                         >=1.0.2    && <1.5
    , logger-effectful
    , pacer
    , pretty-simple                    ^>=4.1.2.0
    , tasty                            >=1.1.0.3  && <1.6
    , tasty-golden                     ^>=2.3.1.1
    , tasty-hedgehog                   >=1.0.0.2  && <1.5
    , tasty-hunit                      >=0.9      && <0.11
    , terminal-effectful
    , text
    , toml-reader
    , typed-process-dynamic-effectful

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Functional.Chart
    Functional.Convert
    Functional.Derive
    Functional.Prelude
    Functional.Scale

  build-depends:
    , base
    , containers
    , env-guard           ^>=0.2
    , filepath
    , fs-effectful
    , fs-utils
    , hedgehog
    , pacer
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , terminal-effectful

  hs-source-dirs: test/functional
  ghc-options:    -threaded
