cabal-version:      2.4
name:               pacer
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.10.2 || ==9.12.2
copyright:          2024-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/pacer/
bug-reports:        https://github.com/tbidne/pacer/issues
synopsis:           A tool for runners.
description:
  Pacer is an executable that produces graphs based on user running data.
  It also provides a CLI interface for common running calculations e.g.
  deriving a pace from distance and duration.

category:           Graphics
extra-source-files:
  cabal.project
  examples/*.csv
  examples/*.jsonc
  examples/chart.png
  LICENSE
  README.md
  web/**/*.css
  web/**/*.html
  web/**/*.js
  web/**/*.json
  web/**/*.ts

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/pacer

common common-lang
  default-extensions:
    ApplicativeDo
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LexicalNegation
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoListTuplePuns
    NoScopedTypeVariables
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RequiredTypeArguments
    StrictData
    TypeAbstractions
    TypeFamilyDependencies

  if os(windows)
    cpp-options: -DWINDOWS

  elif os(osx)
    cpp-options: -DOSX -DPOSIX

  else
    cpp-options: -DLINUX -DPOSIX

  default-language:   GHC2024

library
  import:          common-lang
  other-modules:   Paths_pacer
  autogen-modules: Paths_pacer
  exposed-modules:
    Pacer.Class.FromAlt
    Pacer.Class.IOrd
    Pacer.Class.Parser
    Pacer.Class.Units
    Pacer.Command
    Pacer.Command.Chart
    Pacer.Command.Chart.Args
    Pacer.Command.Chart.Create
    Pacer.Command.Chart.Data.Activity
    Pacer.Command.Chart.Data.Activity.ActivityLabel
    Pacer.Command.Chart.Data.Activity.ActivityType
    Pacer.Command.Chart.Data.Chart
    Pacer.Command.Chart.Data.ChartData
    Pacer.Command.Chart.Data.ChartExtra
    Pacer.Command.Chart.Data.ChartRequest
    Pacer.Command.Chart.Data.Expr
    Pacer.Command.Chart.Data.Expr.Eq
    Pacer.Command.Chart.Data.Expr.Filter
    Pacer.Command.Chart.Data.Expr.Filter.Elem
    Pacer.Command.Chart.Data.Expr.Filter.Set
    Pacer.Command.Chart.Data.Expr.Filter.Utils
    Pacer.Command.Chart.Data.Expr.Ord
    Pacer.Command.Chart.Data.Garmin
    Pacer.Command.Chart.Data.Time.Moment
    Pacer.Command.Chart.Data.Time.Month
    Pacer.Command.Chart.Data.Time.Timestamp
    Pacer.Command.Chart.Data.Time.Timestamp.Internal
    Pacer.Command.Chart.Data.Time.Year
    Pacer.Command.Chart.Params
    Pacer.Command.Chart.Server
    Pacer.Command.Convert
    Pacer.Command.Convert.Args
    Pacer.Command.Convert.Params
    Pacer.Command.Derive
    Pacer.Command.Derive.Args
    Pacer.Command.Derive.Params
    Pacer.Command.Scale
    Pacer.Command.Scale.Args
    Pacer.Command.Scale.Params
    Pacer.Configuration.Args
    Pacer.Configuration.Args.TH
    Pacer.Configuration.Config
    Pacer.Configuration.Env
    Pacer.Configuration.Env.Types
    Pacer.Configuration.Logging
    Pacer.Configuration.Phase
    Pacer.Configuration.Utils
    Pacer.Data.Distance
    Pacer.Data.Distance.Units
    Pacer.Data.Duration
    Pacer.Data.Pace
    Pacer.Data.Result
    Pacer.Driver
    Pacer.Exception
    Pacer.Prelude
    Pacer.Utils
    Pacer.Utils.FileSearch
    Pacer.Utils.Json
    Pacer.Utils.Show
    Pacer.Web
    Pacer.Web.Paths
    Pacer.Web.Utils

  build-depends:
    , aeson                 >=2.0       && <2.3
    , aeson-pretty          ^>=0.8.9
    , algebra-simple        ^>=0.1
    , base                  >=4.20.0.0  && <4.22
    , bytestring            >=0.10.12   && <0.13
    , cassava               ^>=0.5.4.0
    , containers            >=0.6.3.1   && <0.9
    , deepseq               >=1.4.6.0   && <1.6
    , effectful             >=2.5.0.0   && <2.7
    , effectful-utils       ^>=0.1
    , exception-utils       ^>=0.1
    , exceptions            ^>=0.10.4
    , filepath              >=1.5       && <1.6
    , fs-effectful          ^>=0.1
    , fs-utils              ^>=0.1
    , ghc-experimental      >=0.1.0.0   && <9.1203
    , gitrev-typed          ^>=0.1
    , hashable              >=1.4.7.0   && <1.6
    , http-types            ^>=0.12
    , ioref-effectful       ^>=0.1
    , logger-effectful      ^>=0.1
    , megaparsec            ^>=9.7.0
    , nonempty-containers   >=0.3.4.2   && <0.4
    , optics-core           ^>=0.4
    , optics-th             ^>=0.4
    , optparse-applicative  ^>=0.19.0.0
    , optparse-effectful    ^>=0.1
    , os-string             ^>=2.0.0
    , parser-combinators    ^>=1.3.0
    , path                  ^>=0.9.6
    , relative-time         ^>=0.1
    , servant-server        ^>=0.20
    , singletons            ^>=3.0.3
    , smart-math            ^>=0.1
    , template-haskell      >=2.21      && <2.24
    , terminal-effectful    ^>=0.1
    , text                  >=1.2.3.2   && <2.2
    , text-builder-linear   ^>=0.1.3
    , text-display          ^>=1.0.0.0
    , time                  >=1.9.3     && <1.16
    , time-effectful        ^>=0.1
    , unordered-containers  ^>=0.2.20
    , wai                   ^>=3.2.0
    , warp                  ^>=3.4.0

  hs-source-dirs:  src

executable pacer
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , exception-utils
    , pacer

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Pacer.Class.Parser
    Unit.Pacer.Command.Chart
    Unit.Pacer.Command.Chart.Data.Activity
    Unit.Pacer.Command.Chart.Data.Activity.ActivityLabel
    Unit.Pacer.Command.Chart.Data.ChartData
    Unit.Pacer.Command.Chart.Data.ChartRequest
    Unit.Pacer.Command.Chart.Data.Expr
    Unit.Pacer.Command.Chart.Data.Garmin
    Unit.Pacer.Command.Chart.Data.Time.Moment
    Unit.Pacer.Command.Chart.Data.Time.Timestamp
    Unit.Pacer.Command.Chart.Params
    Unit.Pacer.Command.Derive
    Unit.Pacer.Data.Distance
    Unit.Pacer.Data.Distance.Units
    Unit.Pacer.Data.Duration
    Unit.Pacer.Data.Pace
    Unit.Pacer.Driver
    Unit.Pacer.Utils
    Unit.Pacer.Utils.FileSearch
    Unit.Pacer.Utils.Show
    Unit.Prelude
    Unit.TestUtils

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , effectful
    , filepath
    , fs-effectful
    , fs-utils
    , hedgehog             >=1.0.2    && <1.8
    , logger-effectful
    , nonempty-containers
    , os-string
    , pacer
    , pretty-simple        ^>=4.1.2.0
    , tasty                >=1.1.0.3  && <1.6
    , tasty-golden         ^>=2.3.1.1
    , tasty-hedgehog       >=1.0.0.2  && <1.5
    , tasty-hunit          >=0.9      && <0.11
    , terminal-effectful
    , text
    , time
    , tz                   ^>=0.1.3.3

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Functional.Pacer.Command.Chart
    Functional.Pacer.Command.Convert
    Functional.Pacer.Command.Derive
    Functional.Pacer.Command.Scale
    Functional.Prelude

  build-depends:
    , base
    , containers
    , env-guard           ^>=0.2
    , filepath
    , fs-effectful
    , fs-utils
    , hedgehog
    , pacer
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , terminal-effectful
    , text
    , time
    , time-effectful

  hs-source-dirs: test/functional
  ghc-options:    -threaded

test-suite e2e
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , effectful
    , env-guard
    , http-client  >=0.5.9 && <0.8
    , pacer
    , tasty
    , tasty-hunit

  hs-source-dirs: test/e2e
  ghc-options:    -threaded

library bench-utils
  import:          common-lang
  exposed-modules: Bench.Pacer.Utils
  build-depends:
    , base
    , bytestring
    , pacer
    , time

  hs-source-dirs:  bench/utils

test-suite bench-fit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bench-utils
    , env-guard
    , pacer
    , tasty
    , tasty-bench-fit  ^>=0.1
    , tasty-hunit

  hs-source-dirs: bench/fit

benchmark benchmarks
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bench-utils
    , pacer
    , tasty-bench  >=0.3 && <0.5

  hs-source-dirs: bench/app
