cabal-version:      2.4
name:               run-calc
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/run-calc/
bug-reports:        https://github.com/tbidne/run-calc/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  .gitignore
  cabal.project
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/run-calc

common common-lang
  default-extensions:
    DataKinds
    DerivingStrategies
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    Lib
    Running.Data.Distance
    Running.Data.Distance.Units
    Running.Data.Duration
    Running.Data.Duration.Units
    Running.Data.Pace
    Running.Data.Run
    Running.Data.SI

  build-depends:
    , algebra-simple  ^>=0.1
    , base            >=4.14.0.0 && <4.21
    , text-display    >=0.0.3.0  && <0.6

  hs-source-dirs:  src

executable run-calc
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , run-calc

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N
