cabal-version:      2.4
name:               running
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.8.2 || ==9.10.1
copyright:          2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/running/
bug-reports:        https://github.com/tbidne/running/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  .gitignore
  cabal.project
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/running

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    LexicalNegation
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    TypeAbstractions
    TypeFamilyDependencies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    Running
    Running.Class.Parser
    Running.Class.Units
    Running.Config.Args
    Running.Data.Distance
    Running.Data.Distance.Units
    Running.Data.Duration
    Running.Data.Duration.Units
    Running.Data.Pace
    Running.Data.Run
    Running.Prelude

  build-depends:
    , algebra-simple        ^>=0.1
    , base                  >=4.14.0.0 && <4.21
    , bytestring            >=0.10.12  && <0.13
    , megaparsec            >=7.0.5    && <9.7
    , optparse-applicative  >=0.15     && <0.19
    , relative-time         ^>=0.1
    , singletons            ^>=3.0.3
    , smart-math            ^>=0.1
    , text                  >=1.2.3.2  && <2.2
    , text-display          >=0.0.3.0  && <0.6

  -- tuple syntax
  if impl(ghc >=9.10.1)
    build-depends: ghc-experimental ^>=0.1.0.0

  hs-source-dirs:  src

executable running
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , running

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Prelude
    Unit.Running
    Unit.Running.Data.Distance
    Unit.Running.Data.Distance.Units
    Unit.Running.Data.Duration
    Unit.Running.Data.Pace
    Unit.Utils

  build-depends:
    , base
    , hedgehog        >=1.0.2   && <1.5
    , running
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.0.0.2 && <1.5
    , tasty-hunit     >=0.9     && <0.11

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N
