cabal-version: 2.4
name:          pacer
version:       0.1
tested-with:   GHC ==9.8.2 || ==9.10.1
copyright:     2024 Thomas Bidne
author:        Thomas Bidne
maintainer:    tbidne@protonmail.com
homepage:      https://github.com/tbidne/pacer/
bug-reports:   https://github.com/tbidne/pacer/issues
synopsis:      A tool for runners.
description:
  Pacer is an executable that produces graphs based on user running data.
  It also provides a CLI interface for common running calculations e.g.
  deriving a pace from distance and duration.

category:      Graphics

source-repository head
  type:     git
  location: https://github.com/tbidne/pacer

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    LexicalNegation
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    TypeAbstractions
    TypeFamilyDependencies

  default-language:   GHC2021

library
  import:          common-lang
  other-modules:   Paths_pacer
  autogen-modules: Paths_pacer
  exposed-modules:
    Pacer
    Pacer.Class.Parser
    Pacer.Class.Units
    Pacer.Config.Args
    Pacer.Config.Args.Command
    Pacer.Config.Args.Utils
    Pacer.Config.Data
    Pacer.Data.Distance
    Pacer.Data.Distance.Units
    Pacer.Data.Duration
    Pacer.Data.Duration.Units
    Pacer.Data.Pace
    Pacer.Driver
    Pacer.Prelude

  build-depends:
    , algebra-simple        ^>=0.1
    , base                  >=4.14.0.0 && <4.21
    , bytestring            >=0.10.12  && <0.13
    , exception-utils       ^>=0.1
    , megaparsec            >=7.0.5    && <9.7
    , optparse-applicative  >=0.15     && <0.19
    , relative-time         ^>=0.1
    , singletons            ^>=3.0.3
    , smart-math            ^>=0.1
    , text                  >=1.2.3.2  && <2.2
    , text-display          >=0.0.3.0  && <0.6

  -- tuple syntax
  if impl(ghc >=9.10.1)
    build-depends: ghc-experimental ^>=0.1.0.0

  hs-source-dirs:  src

executable pacer
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , pacer

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Pacer
    Unit.Pacer.Data.Distance
    Unit.Pacer.Data.Distance.Units
    Unit.Pacer.Data.Duration
    Unit.Pacer.Data.Pace
    Unit.Prelude
    Unit.Utils

  build-depends:
    , base
    , hedgehog        >=1.0.2   && <1.5
    , pacer
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.0.0.2 && <1.5
    , tasty-hunit     >=0.9     && <0.11

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Functional.Prelude
  build-depends:
    , base
    , hedgehog
    , pacer
    , tasty
    , tasty-hedgehog
    , tasty-hunit

  hs-source-dirs: test/functional
  ghc-options:    -threaded
